[project]
name = "multi-agent-travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.1",
  "langchain>=1.2.10",
  "langchain-openai>=1.1.10",
  "langgraph>=1.0.10",
  "pydantic>=2.12.5",
  "uvicorn[standard]>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
